[gd_scene load_steps=17 format=3 uid="uid://cbx56drcs8l7i"]

[ext_resource type="Script" uid="uid://bouod2nhxebns" path="res://scenes/battle_arena.gd" id="1_kvrme"]
[ext_resource type="Texture2D" uid="uid://bluinae2utehy" path="res://assets/KBLr7OS.png" id="1_yb4oc"]
[ext_resource type="Texture2D" uid="uid://dfnrcwb8at4bs" path="res://assets/inventory.png" id="2_yspgq"]
[ext_resource type="Texture2D" uid="uid://ba52xakc62iue" path="res://assets/Faceset.png" id="3_l7kcc"]
[ext_resource type="Texture2D" uid="uid://qenwe53dd262" path="res://assets/IconHeart.png" id="4_kvrme"]
[ext_resource type="Texture2D" uid="uid://c0o053y5gn82d" path="res://assets/Guard.png" id="5_8wat5"]
[ext_resource type="Resource" uid="uid://056tykq1kbrs" path="res://resources/units/crusader.tres" id="5_uhs84"]
[ext_resource type="Resource" uid="uid://d4fr5qtpeitgt" path="res://resources/units/paladin.tres" id="6_tmtb4"]
[ext_resource type="Texture2D" uid="uid://cwxyqqj30w48c" path="res://assets/tool_sword_b.png" id="6_uhs84"]
[ext_resource type="Texture2D" uid="uid://d061pdnpmyceu" path="res://assets/Boot.png" id="7_tmtb4"]
[ext_resource type="Resource" uid="uid://rycddq6jk7y1" path="res://resources/units/monk.tres" id="7_ts8p1"]
[ext_resource type="Texture2D" uid="uid://bg1udx62we47r" path="res://assets/icon_target.png" id="8_ts8p1"]
[ext_resource type="Texture2D" uid="uid://cpkul0bwv1bel" path="res://assets/bolt_gold.png" id="9_ei3no"]
[ext_resource type="PackedScene" uid="uid://befg4wnuj3gba" path="res://scenes/unit.tscn" id="10_unit_scene"]
[ext_resource type="Resource" uid="uid://b1l8ixvkj3g2b" path="res://resources/units/warrior.tres" id="11_warrior_data"]

[sub_resource type="AtlasTexture" id="AtlasTexture_70rpv"]
atlas = ExtResource("2_yspgq")
region = Rect2(0, 64, 48, 48)

[node name="BattleArena" type="Node2D"]
script = ExtResource("1_kvrme")

[node name="Background" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.61339027, 0.61339027, 0.61339027, 1)
position = Vector2(-432, -284)
texture = ExtResource("1_yb4oc")
centered = false

[node name="Warrior" parent="." instance=ExtResource("10_unit_scene")]
position = Vector2(397.00003, 290.00003)
scale = Vector2(4.9305778, 11.611068)
unit_data = ExtResource("11_warrior_data")

[node name="Crusader" parent="." instance=ExtResource("10_unit_scene")]
position = Vector2(285.00003, 290)
scale = Vector2(4.9305778, 11.611068)
unit_data = ExtResource("5_uhs84")

[node name="Paladin" parent="." instance=ExtResource("10_unit_scene")]
position = Vector2(170, 290.00003)
scale = Vector2(4.9305778, 11.611068)
unit_data = ExtResource("6_tmtb4")

[node name="Monk" parent="." instance=ExtResource("10_unit_scene")]
position = Vector2(58, 290)
scale = Vector2(4.9305778, 11.611068)
unit_data = ExtResource("7_ts8p1")

[node name="BottomUI" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="BottomUI"]
custom_minimum_size = Vector2(1152, 216)
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -216.0
offset_right = 1152.0
grow_vertical = 0

[node name="Background" type="TextureRect" parent="BottomUI/UI"]
modulate = Color(0.1728327, 0.17283267, 0.17283267, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 25.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_70rpv")

[node name="Character" type="VBoxContainer" parent="BottomUI/UI"]
custom_minimum_size = Vector2(576, 216)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Control" type="Control" parent="BottomUI/UI/Character"]
custom_minimum_size = Vector2(0, 216)
layout_mode = 2

[node name="Portrait" type="HBoxContainer" parent="BottomUI/UI/Character/Control"]
custom_minimum_size = Vector2(288, 180)
layout_mode = 1
offset_right = 288.0

[node name="CharacterPortrait" type="TextureRect" parent="BottomUI/UI/Character/Control/Portrait"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_l7kcc")

[node name="Name" type="HBoxContainer" parent="BottomUI/UI/Character/Control"]
custom_minimum_size = Vector2(288, 0)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -42.0
offset_right = 288.0
grow_vertical = 0

[node name="Label" type="Label" parent="BottomUI/UI/Character/Control/Name"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
vertical_alignment = 1

[node name="Stats" type="VBoxContainer" parent="BottomUI/UI/Character/Control"]
custom_minimum_size = Vector2(80, 216)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -288.0
offset_right = -208.0
offset_bottom = 216.0
grow_horizontal = 0

[node name="Health" type="Control" parent="BottomUI/UI/Character/Control/Stats"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3

[node name="Icon" type="TextureRect" parent="BottomUI/UI/Character/Control/Stats/Health"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -16.0
offset_right = 32.0
offset_bottom = 16.0
grow_vertical = 2
size_flags_vertical = 0
texture = ExtResource("4_kvrme")

[node name="Label" type="Label" parent="BottomUI/UI/Character/Control/Stats/Health"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
text = "15/47"
vertical_alignment = 1

[node name="Defense" type="Control" parent="BottomUI/UI/Character/Control/Stats"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3

[node name="Icon" type="TextureRect" parent="BottomUI/UI/Character/Control/Stats/Defense"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -16.0
offset_right = 32.0
offset_bottom = 16.0
grow_vertical = 2
size_flags_vertical = 0
texture = ExtResource("5_8wat5")

[node name="Label" type="Label" parent="BottomUI/UI/Character/Control/Stats/Defense"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
text = "14/47"
vertical_alignment = 1

[node name="Damage" type="Control" parent="BottomUI/UI/Character/Control/Stats"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="BottomUI/UI/Character/Control/Stats/Damage"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -16.0
offset_right = 32.0
offset_bottom = 16.0
grow_vertical = 2
size_flags_vertical = 0
texture = ExtResource("6_uhs84")

[node name="Label" type="Label" parent="BottomUI/UI/Character/Control/Stats/Damage"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
text = "14/47"
vertical_alignment = 1

[node name="Speed" type="Control" parent="BottomUI/UI/Character/Control/Stats"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="BottomUI/UI/Character/Control/Stats/Speed"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -16.0
offset_right = 32.0
offset_bottom = 16.0
grow_vertical = 2
size_flags_vertical = 0
texture = ExtResource("7_tmtb4")

[node name="Label" type="Label" parent="BottomUI/UI/Character/Control/Stats/Speed"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
text = "14/47"
vertical_alignment = 1

[node name="Accuracy" type="Control" parent="BottomUI/UI/Character/Control/Stats"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="BottomUI/UI/Character/Control/Stats/Accuracy"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -16.0
offset_right = 32.0
offset_bottom = 16.0
grow_vertical = 2
size_flags_vertical = 0
texture = ExtResource("8_ts8p1")

[node name="Label" type="Label" parent="BottomUI/UI/Character/Control/Stats/Accuracy"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
text = "14/47"
vertical_alignment = 1

[node name="Crit" type="Control" parent="BottomUI/UI/Character/Control/Stats"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="BottomUI/UI/Character/Control/Stats/Crit"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -16.0
offset_right = 32.0
offset_bottom = 16.0
grow_vertical = 2
size_flags_vertical = 0
texture = ExtResource("9_ei3no")

[node name="Label" type="Label" parent="BottomUI/UI/Character/Control/Stats/Crit"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
text = "14/47"
vertical_alignment = 1

[node name="ActionsContainer" type="GridContainer" parent="BottomUI/UI/Character/Control"]
custom_minimum_size = Vector2(208, 216)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -208.0
offset_bottom = 220.0
grow_horizontal = 0
theme_override_constants/v_separation = 62
columns = 3

[node name="Attack" type="Button" parent="BottomUI/UI/Character/Control/ActionsContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "Attack"

[node name="Defend" type="Button" parent="BottomUI/UI/Character/Control/ActionsContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "Defend"

[node name="Item" type="Button" parent="BottomUI/UI/Character/Control/ActionsContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "Item"

[node name="Skill" type="Button" parent="BottomUI/UI/Character/Control/ActionsContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "Skill 1"

[node name="Button8" type="Button" parent="BottomUI/UI/Character/Control/ActionsContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "Skill 2"

[node name="Button9" type="Button" parent="BottomUI/UI/Character/Control/ActionsContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "Skill 3"

[node name="Button2" type="Button" parent="BottomUI/UI/Character/Control/ActionsContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "Skill 4"

[node name="Button3" type="Button" parent="BottomUI/UI/Character/Control/ActionsContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "Skill 5"

[node name="Button4" type="Button" parent="BottomUI/UI/Character/Control/ActionsContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "Skill 6"

[node name="Actions" type="VBoxContainer" parent="BottomUI/UI"]
custom_minimum_size = Vector2(576, 216)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -576.0
offset_bottom = 216.0
grow_horizontal = 0

[node name="Control" type="Control" parent="BottomUI/UI/Actions"]
custom_minimum_size = Vector2(576, 216)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BottomUI/UI/Actions/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="input_event" from="Warrior" to="." method="_on_warrior_input_event"]
[connection signal="input_event" from="Crusader" to="." method="_on_crusader_input_event"]
[connection signal="input_event" from="Paladin" to="." method="_on_paladin_input_event"]
[connection signal="input_event" from="Monk" to="." method="_on_monk_input_event"]
